--- a/code/parts/layout.html
+++ b/code/parts/layout.html
@@ -135,10 +135,10 @@
                   Admin
                   <i ng-click="expandMenu('index.accountSettings', $event)" class="pull-right {{ menuExpanded('index.accountSettings') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
                 </a>
-                <a ui-sref-active="active" ui-sref="index.accountSettings.logshippers" class="side-menu-sub-item" ng-if="!userService.isUser()">
+                <!--a ui-sref-active="active" ui-sref="index.accountSettings.logshippers" class="side-menu-sub-item" ng-if="!userService.isUser()">
                   <i class="sub-menu-icon glyphicon glyphicon-open-file"></i>
                    Log Shipping
-                </a>
+                </a-->
                 <a ui-sref-active="active" ui-sref="index.accountSettings.users" class="side-menu-sub-item" ng-if="!userService.isUser()">
                     <i class="sub-menu-icon fa fa-users"></i>
                     Users
